# sparseIMS

./: .gitignore  README.md  pyproject.toml
examples/: density.py  dimension.py  sym.py
latex/: IMSsparseMatrices.run.xml  IMSsparseMatrices.tex  preamble_math.sty  preamble_tikz.sty  references.bib
latex/guideCodesANDReport/: IMSsparseMatrices.tex  instructions.tex
latex/problems/: IMSproblems.bcf-SAVE-ERROR  IMSproblems.tex  IMSproblems1.tex  IMSproblems2.tex
latex/problems/solutions/: sheet1_ex2.py
latex/proposal/: ImperialMathsSchool_Sparse.txt
solutions/: sheet2_ex2.py
src/: main.py  pyproject.toml
src/ims/: main.py
src/solutions/: ex1.py  sheet1_ex2.py  sheet2_ex1.py
src/utils/: __init__.py  _characterise.py
src/utils/measures/: __init__.py  _execution_time.py  _measure.py
src/utils/methods/: __init__.py  _cholesky.py  _inverse.py  _lu.py  _method.py  _qr.py  _splu.py
test/: test.py
