[project]
name = "ims"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "JWSchaefer", email = "joe.w.schaefer@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.3.5",
  "polars>=1.35.2",
  "scipy>=1.16.3",
  "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pyqt5>=5.15.11",
    "seaborn>=0.13.2",
]
